AI: in focus mode, user say that synth wave theme the white text over yellow background in major node is too hard to read. similarly, in nebula mode, white text over bright cyan background in major mode is too hard to read. change to adapt to this user use case.

--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
         --focus-node-beacon-color: var(--primary-accent-dark);
         --focus-panel-text: var(--text-primary);
         --focus-panel-text-rgb: 55,71,79;
+        --focus-node-major-text: var(--text-on-accent);
         --focus-parent-feed: var(--secondary-accent-dark);
         --focus-child-feed: var(--primary-accent-dark);
         --focus-panel-bg: rgba(var(--panel-bg-rgb), 0.95);
@@ -346,6 +347,7 @@
         --focus-node-beacon-color: var(--secondary-accent-dark);
         --focus-panel-text: var(--text-primary);
         --focus-panel-text-rgb: 93,64,55;
+        --focus-node-major-text: var(--text-on-accent);
         --focus-parent-feed: var(--text-tertiary);
         --focus-child-feed: var(--primary-accent-dark);
         --focus-panel-bg: rgba(var(--app-bg-rgb), 0.9);
